--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,21 +11,21 @@ on:
 jobs:
   generate-sbom:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout Repository
-      uses: actions/upload-artifact@v4
+      uses: actions/checkout@v3
 
     - name: Install Syft
       run: |
         curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
 
-    - name: Generate SBOM
+    - name: Generate SBOM                      #Modified
       run: |
-        syft docker.io/kodekloud/webapp-color:latest -o SPDX-JSON > spdx.json
+        syft docker.io/kodekloud/webapp-color:latest -o spdx-json > spdx.json  
 
     - name: Upload SBOM Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: sbom-report
-        path: spdx.json
+        path: sbom.xml
